# blueprint-takeoff

./: .env.example  .gitignore  DEFINITION_OF_DONE.md  OPERATIONS.md  PLAN.md  R5_FINDINGS.md  R5_REPORT.md  README.md  SECURITY_CHECKLIST.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: R5_DECISIONS.md  r6_variant_c_cost_gate.md
eval/: build_report.py  gate_745_result.json  inject_errors.py  leaderboard.py  leaderboard_v8.json  matching.py  merge_leaderboard.py  metrics.py  r7_gate_745.py  run_benchmark.py  run_benchmark.py.r5bak  step_runner.py  step_runner_e.py  symbolic_checks.py
runs/: R3_LESSONS.md  leaderboard.csv  leaderboard.html  r5_leaderboard.csv  r5_leaderboard.html  r5v2_leaderboard.csv  r6_leaderboard.csv  r7_745_gate.md
runs/r6/: compare_and_notify.py  r6_run.stdout  run_r6_benchmark.py  sheet_id.py  transcribe.py
scripts/: build_r5_report.py  build_r6_report.py  heartbeat.py  poll_tg.py  qa_viewer.py  r5_compile_partial.py  validate_pdfs.py
src/: credentials.py  discovery.py  discovery.py.r5bak  normalize.py  notation.py  pdf_utils.py  quality.py  router.py  schema.py
src/branches/: raster_vlm.py  vector_table.py
src/pipelines/: __init__.py  base.py  parsing.py  variant_a.py  variant_b.py  (+4 more)
tests/: conftest.py  test_branch1_ofr.py  test_credentials.py  test_discovery.py  test_discovery.py.r5bak  test_error_injection.py  test_eval_gate_4006.py  test_matching.py  test_metrics.py  test_neuro_symbolic_injection.py  test_no_crash_all_projects.py  test_notation.py  test_parsing.py  test_pipeline_smoke.py  test_router.py
(+15 files in other folders)
