[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blueprint-takeoff"
version = "0.1.0"
description = "Window/Door Takeoff Engine — blueprint PDF to structured breakdown"
requires-python = ">=3.10"
authors = [{name = "vnrpz", email = "iraaa1983@gmail.com"}]
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
